Added ID-card support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,18 @@ mail.username=brockhausserver@gmail.com
 mail.password=brabockers
 
 locale.cookie.name=lang
+
+
+# Comment "test" profile and uncomment properties with prefix server.ssl to enable ID-card authentication
+spring.profiles.active=test
+# Note: in key-store and trust-store note the order (certificate-CA---certificate-CA---certificate-CA...)
+#spring.profiles.active=production
+#server.ssl.key-store=keystore.jks
+#server.ssl.trust-store=id-truststore.jks
+#server.ssl.key-store-password=changeit
+#server.ssl.key-alias=localhost
+#server.ssl.key-password=changeit
+#server.ssl.enabled=true
+#server.port=8443
+#server.ssl.trust-store-password=changeit
+#server.ssl.client-auth=need
