--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mail.smtp.debug=true
 mail.smtp.starttls.required=true
 mail.smtp.socketFactory.fallback=false
 mail.username=brockhausserver@gmail.com
-mail.password=brabockers
+mail.password=brabockers2
 
 locale.cookie.name=lang
 
